// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`n-dropdown dropdown clickoutside 1`] = `
<div
  class="n-dropdown-menu n-popover-shared n-dropdown"
  style="--n-box-shadow: 0 3px 6px -4px rgba(0, 0, 0, .12), 0 6px 16px 0 rgba(0, 0, 0, .08), 0 9px 28px 8px rgba(0, 0, 0, .05); --n-bezier: cubic-bezier(.4, 0, .2, 1); --n-bezier-ease-in: cubic-bezier(.4, 0, 1, 1); --n-bezier-ease-out: cubic-bezier(0, 0, .2, 1); --n-font-size: 14px; --n-text-color: rgb(51, 54, 57); --n-color: #fff; --n-divider-color: rgb(239, 239, 245); --n-border-radius: 3px; --n-arrow-height: 6px; --n-arrow-offset: 10px; --n-arrow-offset-vertical: 10px; --n-padding: 4px 0; --n-space: 6px; --n-space-arrow: 10px; --n-option-height: 34px; --n-option-prefix-width: 14px; --n-option-icon-prefix-width: 36px; --n-option-suffix-width: 14px; --n-option-icon-suffix-width: 32px; --n-option-icon-size: 16px; --n-option-opacity-disabled: 0.5; --n-option-color-hover: rgb(243, 243, 245); --n-option-color-active: rgba(24, 160, 88, 0.1); --n-option-text-color: rgb(51, 54, 57); --n-option-text-color-hover: rgb(51, 54, 57); --n-option-text-color-active: #18a058; --n-option-text-color-child-active: #18a058; --n-prefix-color: rgb(51, 54, 57); --n-suffix-color: rgb(51, 54, 57); --n-group-header-text-color: rgb(118, 124, 130);"
>
  
  
  <div
    class="n-dropdown-option"
  >
    <div
      class="n-dropdown-option-body n-dropdown-option-body--group"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
        data-dropdown-option="true"
      />
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        主角和吃的
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      />
    </div>
  </div>
  
  <div
    class="n-dropdown-option"
    data-dropdown-option="true"
  >
    <div
      class="n-dropdown-option-body"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
      >
        <!---->
      </div>
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        杰·盖茨比
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      />
    </div>
    <!---->
  </div>
  <div
    class="n-dropdown-divider"
  />
  <div
    class="n-dropdown-option"
    data-dropdown-option="true"
  >
    <div
      class="n-dropdown-option-body n-dropdown-option-body--disabled"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
      >
        <i
          class="n-icon"
          role="img"
          style="--n-bezier: cubic-bezier(.4, 0, .2, 1);"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <rect
              fill="none"
              height="256"
              rx="16"
              ry="16"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="32"
              transform="rotate(180 256 208)"
              width="448"
              x="32"
              y="80"
            />
            <path
              d="M64 384h384"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M96 432h320"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <circle
              cx="256"
              cy="208"
              fill="none"
              r="80"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M480 160a80 80 0 0 1-80-80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M32 160a80 80 0 0 0 80-80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M480 256a80 80 0 0 0-80 80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M32 256a80 80 0 0 1 80 80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
          </svg>
        </i>
      </div>
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        黛西·布坎南
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      />
    </div>
    <!---->
  </div>
  
  
  <div
    class="n-dropdown-divider"
  />
  <div
    class="n-dropdown-option"
    data-dropdown-option="true"
  >
    <div
      class="n-dropdown-option-body"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
      >
        <!---->
      </div>
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        其他角色
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      >
        <i
          class="n-icon"
          role="img"
          style="--n-bezier: cubic-bezier(.4, 0, .2, 1);"
        >
          <svg
            fill="none"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.64645 3.14645C5.45118 3.34171 5.45118 3.65829 5.64645 3.85355L9.79289 8L5.64645 12.1464C5.45118 12.3417 5.45118 12.6583 5.64645 12.8536C5.84171 13.0488 6.15829 13.0488 6.35355 12.8536L10.8536 8.35355C11.0488 8.15829 11.0488 7.84171 10.8536 7.64645L6.35355 3.14645C6.15829 2.95118 5.84171 2.95118 5.64645 3.14645Z"
              fill="currentColor"
            />
          </svg>
        </i>
      </div>
    </div>
    
    <div
      class="n-dropdown-offset-container"
    >
      <!---->
    </div>
    
  </div>
  
  <!---->
</div>
`;

exports[`n-dropdown inverted style 1`] = `
<div
  class="n-dropdown-menu n-popover-shared n-dropdown"
  style="--n-box-shadow: 0 3px 6px -4px rgba(0, 0, 0, .12), 0 6px 16px 0 rgba(0, 0, 0, .08), 0 9px 28px 8px rgba(0, 0, 0, .05); --n-bezier: cubic-bezier(.4, 0, .2, 1); --n-bezier-ease-in: cubic-bezier(.4, 0, 1, 1); --n-bezier-ease-out: cubic-bezier(0, 0, .2, 1); --n-font-size: 14px; --n-text-color: rgb(51, 54, 57); --n-color: rgb(0, 20, 40); --n-divider-color: rgb(239, 239, 245); --n-border-radius: 3px; --n-arrow-height: 6px; --n-arrow-offset: 10px; --n-arrow-offset-vertical: 10px; --n-padding: 4px 0; --n-space: 6px; --n-space-arrow: 10px; --n-option-height: 34px; --n-option-prefix-width: 14px; --n-option-icon-prefix-width: 36px; --n-option-suffix-width: 14px; --n-option-icon-suffix-width: 32px; --n-option-icon-size: 16px; --n-option-opacity-disabled: 0.5; --n-option-color-hover: #18a058; --n-option-color-active: #18a058; --n-option-text-color: #BBB; --n-option-text-color-hover: #FFF; --n-option-text-color-active: #FFF; --n-option-text-color-child-active: #FFF; --n-prefix-color: #BBB; --n-suffix-color: #BBB; --n-group-header-text-color: #AAA;"
>
  
  
  <div
    class="n-dropdown-option"
  >
    <div
      class="n-dropdown-option-body n-dropdown-option-body--group"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
        data-dropdown-option="true"
      />
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        主角和吃的
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      />
    </div>
  </div>
  
  <div
    class="n-dropdown-option"
    data-dropdown-option="true"
  >
    <div
      class="n-dropdown-option-body"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
      >
        <!---->
      </div>
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        杰·盖茨比
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      />
    </div>
    <!---->
  </div>
  <div
    class="n-dropdown-divider"
  />
  <div
    class="n-dropdown-option"
    data-dropdown-option="true"
  >
    <div
      class="n-dropdown-option-body n-dropdown-option-body--disabled"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
      >
        <i
          class="n-icon"
          role="img"
          style="--n-bezier: cubic-bezier(.4, 0, .2, 1);"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <rect
              fill="none"
              height="256"
              rx="16"
              ry="16"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="32"
              transform="rotate(180 256 208)"
              width="448"
              x="32"
              y="80"
            />
            <path
              d="M64 384h384"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M96 432h320"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <circle
              cx="256"
              cy="208"
              fill="none"
              r="80"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M480 160a80 80 0 0 1-80-80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M32 160a80 80 0 0 0 80-80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M480 256a80 80 0 0 0-80 80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M32 256a80 80 0 0 1 80 80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
          </svg>
        </i>
      </div>
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        黛西·布坎南
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      />
    </div>
    <!---->
  </div>
  
  
  <div
    class="n-dropdown-divider"
  />
  <div
    class="n-dropdown-option"
    data-dropdown-option="true"
  >
    <div
      class="n-dropdown-option-body"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
      >
        <!---->
      </div>
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        其他角色
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      >
        <i
          class="n-icon"
          role="img"
          style="--n-bezier: cubic-bezier(.4, 0, .2, 1);"
        >
          <svg
            fill="none"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.64645 3.14645C5.45118 3.34171 5.45118 3.65829 5.64645 3.85355L9.79289 8L5.64645 12.1464C5.45118 12.3417 5.45118 12.6583 5.64645 12.8536C5.84171 13.0488 6.15829 13.0488 6.35355 12.8536L10.8536 8.35355C11.0488 8.15829 11.0488 7.84171 10.8536 7.64645L6.35355 3.14645C6.15829 2.95118 5.84171 2.95118 5.64645 3.14645Z"
              fill="currentColor"
            />
          </svg>
        </i>
      </div>
    </div>
    
    <div
      class="n-dropdown-offset-container"
    >
      <!---->
    </div>
    
  </div>
  
  <!---->
</div>
`;

exports[`n-dropdown should work with \`render-icon\` props 1`] = `
<div
  class="n-dropdown-menu n-popover-shared n-dropdown"
  style="--n-box-shadow: 0 3px 6px -4px rgba(0, 0, 0, .12), 0 6px 16px 0 rgba(0, 0, 0, .08), 0 9px 28px 8px rgba(0, 0, 0, .05); --n-bezier: cubic-bezier(.4, 0, .2, 1); --n-bezier-ease-in: cubic-bezier(.4, 0, 1, 1); --n-bezier-ease-out: cubic-bezier(0, 0, .2, 1); --n-font-size: 14px; --n-text-color: rgb(51, 54, 57); --n-color: #fff; --n-divider-color: rgb(239, 239, 245); --n-border-radius: 3px; --n-arrow-height: 6px; --n-arrow-offset: 10px; --n-arrow-offset-vertical: 10px; --n-padding: 4px 0; --n-space: 6px; --n-space-arrow: 10px; --n-option-height: 34px; --n-option-prefix-width: 14px; --n-option-icon-prefix-width: 36px; --n-option-suffix-width: 14px; --n-option-icon-suffix-width: 32px; --n-option-icon-size: 16px; --n-option-opacity-disabled: 0.5; --n-option-color-hover: rgb(243, 243, 245); --n-option-color-active: rgba(24, 160, 88, 0.1); --n-option-text-color: rgb(51, 54, 57); --n-option-text-color-hover: rgb(51, 54, 57); --n-option-text-color-active: #18a058; --n-option-text-color-child-active: #18a058; --n-prefix-color: rgb(51, 54, 57); --n-suffix-color: rgb(51, 54, 57); --n-group-header-text-color: rgb(118, 124, 130);"
>
  
  
  <div
    class="n-dropdown-option"
  >
    <div
      class="n-dropdown-option-body n-dropdown-option-body--group"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
        data-dropdown-option="true"
      />
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        主角和吃的
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      />
    </div>
  </div>
  
  <div
    class="n-dropdown-option"
    data-dropdown-option="true"
  >
    <div
      class="n-dropdown-option-body"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
      >
        <i
          class="n-icon"
          role="img"
          style="--n-bezier: cubic-bezier(.4, 0, .2, 1);"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <rect
              fill="none"
              height="256"
              rx="16"
              ry="16"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="32"
              transform="rotate(180 256 208)"
              width="448"
              x="32"
              y="80"
            />
            <path
              d="M64 384h384"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M96 432h320"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <circle
              cx="256"
              cy="208"
              fill="none"
              r="80"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M480 160a80 80 0 0 1-80-80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M32 160a80 80 0 0 0 80-80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M480 256a80 80 0 0 0-80 80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M32 256a80 80 0 0 1 80 80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
          </svg>
        </i>
      </div>
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        杰·盖茨比
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      />
    </div>
    <!---->
  </div>
  <div
    class="n-dropdown-divider"
  />
  <div
    class="n-dropdown-option"
    data-dropdown-option="true"
  >
    <div
      class="n-dropdown-option-body n-dropdown-option-body--disabled"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
      >
        <i
          class="n-icon"
          role="img"
          style="--n-bezier: cubic-bezier(.4, 0, .2, 1);"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <rect
              fill="none"
              height="256"
              rx="16"
              ry="16"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="32"
              transform="rotate(180 256 208)"
              width="448"
              x="32"
              y="80"
            />
            <path
              d="M64 384h384"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M96 432h320"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <circle
              cx="256"
              cy="208"
              fill="none"
              r="80"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M480 160a80 80 0 0 1-80-80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M32 160a80 80 0 0 0 80-80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M480 256a80 80 0 0 0-80 80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M32 256a80 80 0 0 1 80 80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
          </svg>
        </i>
      </div>
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        黛西·布坎南
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      />
    </div>
    <!---->
  </div>
  
  
  <div
    class="n-dropdown-divider"
  />
  <div
    class="n-dropdown-option"
    data-dropdown-option="true"
  >
    <div
      class="n-dropdown-option-body"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
      >
        <i
          class="n-icon"
          role="img"
          style="--n-bezier: cubic-bezier(.4, 0, .2, 1);"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <rect
              fill="none"
              height="256"
              rx="16"
              ry="16"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="32"
              transform="rotate(180 256 208)"
              width="448"
              x="32"
              y="80"
            />
            <path
              d="M64 384h384"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M96 432h320"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <circle
              cx="256"
              cy="208"
              fill="none"
              r="80"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M480 160a80 80 0 0 1-80-80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M32 160a80 80 0 0 0 80-80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M480 256a80 80 0 0 0-80 80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M32 256a80 80 0 0 1 80 80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
          </svg>
        </i>
      </div>
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        其他角色
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      >
        <i
          class="n-icon"
          role="img"
          style="--n-bezier: cubic-bezier(.4, 0, .2, 1);"
        >
          <svg
            fill="none"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.64645 3.14645C5.45118 3.34171 5.45118 3.65829 5.64645 3.85355L9.79289 8L5.64645 12.1464C5.45118 12.3417 5.45118 12.6583 5.64645 12.8536C5.84171 13.0488 6.15829 13.0488 6.35355 12.8536L10.8536 8.35355C11.0488 8.15829 11.0488 7.84171 10.8536 7.64645L6.35355 3.14645C6.15829 2.95118 5.84171 2.95118 5.64645 3.14645Z"
              fill="currentColor"
            />
          </svg>
        </i>
      </div>
    </div>
    
    <div
      class="n-dropdown-offset-container"
    >
      <!---->
    </div>
    
  </div>
  
  <!---->
</div>
`;

exports[`n-dropdown should work with \`render-label\` props 1`] = `
<div
  class="n-dropdown-menu n-popover-shared n-dropdown"
  style="--n-box-shadow: 0 3px 6px -4px rgba(0, 0, 0, .12), 0 6px 16px 0 rgba(0, 0, 0, .08), 0 9px 28px 8px rgba(0, 0, 0, .05); --n-bezier: cubic-bezier(.4, 0, .2, 1); --n-bezier-ease-in: cubic-bezier(.4, 0, 1, 1); --n-bezier-ease-out: cubic-bezier(0, 0, .2, 1); --n-font-size: 14px; --n-text-color: rgb(51, 54, 57); --n-color: #fff; --n-divider-color: rgb(239, 239, 245); --n-border-radius: 3px; --n-arrow-height: 6px; --n-arrow-offset: 10px; --n-arrow-offset-vertical: 10px; --n-padding: 4px 0; --n-space: 6px; --n-space-arrow: 10px; --n-option-height: 34px; --n-option-prefix-width: 14px; --n-option-icon-prefix-width: 36px; --n-option-suffix-width: 14px; --n-option-icon-suffix-width: 32px; --n-option-icon-size: 16px; --n-option-opacity-disabled: 0.5; --n-option-color-hover: rgb(243, 243, 245); --n-option-color-active: rgba(24, 160, 88, 0.1); --n-option-text-color: rgb(51, 54, 57); --n-option-text-color-hover: rgb(51, 54, 57); --n-option-text-color-active: #18a058; --n-option-text-color-child-active: #18a058; --n-prefix-color: rgb(51, 54, 57); --n-suffix-color: rgb(51, 54, 57); --n-group-header-text-color: rgb(118, 124, 130);"
>
  
  
  <div
    class="n-dropdown-option"
  >
    <div
      class="n-dropdown-option-body n-dropdown-option-body--group"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
        data-dropdown-option="true"
      />
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        <a
          href="renderLabel"
        >
          主角和吃的
        </a>
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      />
    </div>
  </div>
  
  <div
    class="n-dropdown-option"
    data-dropdown-option="true"
  >
    <div
      class="n-dropdown-option-body"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
      >
        <!---->
      </div>
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        <a
          href="renderLabel"
        >
          杰·盖茨比
        </a>
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      />
    </div>
    <!---->
  </div>
  <div
    class="n-dropdown-divider"
  />
  <div
    class="n-dropdown-option"
    data-dropdown-option="true"
  >
    <div
      class="n-dropdown-option-body n-dropdown-option-body--disabled"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
      >
        <i
          class="n-icon"
          role="img"
          style="--n-bezier: cubic-bezier(.4, 0, .2, 1);"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <rect
              fill="none"
              height="256"
              rx="16"
              ry="16"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="32"
              transform="rotate(180 256 208)"
              width="448"
              x="32"
              y="80"
            />
            <path
              d="M64 384h384"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M96 432h320"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <circle
              cx="256"
              cy="208"
              fill="none"
              r="80"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M480 160a80 80 0 0 1-80-80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M32 160a80 80 0 0 0 80-80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M480 256a80 80 0 0 0-80 80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M32 256a80 80 0 0 1 80 80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
          </svg>
        </i>
      </div>
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        <a
          href="renderLabel"
        >
          黛西·布坎南
        </a>
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      />
    </div>
    <!---->
  </div>
  
  
  <div
    class="n-dropdown-divider"
  />
  <div
    class="n-dropdown-option"
    data-dropdown-option="true"
  >
    <div
      class="n-dropdown-option-body"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
      >
        <!---->
      </div>
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        <a
          href="renderLabel"
        >
          其他角色
        </a>
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      >
        <i
          class="n-icon"
          role="img"
          style="--n-bezier: cubic-bezier(.4, 0, .2, 1);"
        >
          <svg
            fill="none"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.64645 3.14645C5.45118 3.34171 5.45118 3.65829 5.64645 3.85355L9.79289 8L5.64645 12.1464C5.45118 12.3417 5.45118 12.6583 5.64645 12.8536C5.84171 13.0488 6.15829 13.0488 6.35355 12.8536L10.8536 8.35355C11.0488 8.15829 11.0488 7.84171 10.8536 7.64645L6.35355 3.14645C6.15829 2.95118 5.84171 2.95118 5.64645 3.14645Z"
              fill="currentColor"
            />
          </svg>
        </i>
      </div>
    </div>
    
    <div
      class="n-dropdown-offset-container"
    >
      <!---->
    </div>
    
  </div>
  
  <!---->
</div>
`;

exports[`n-dropdown shows arrow 1`] = `null`;

exports[`n-dropdown shows menu after click 1`] = `
<div
  class="n-dropdown-menu n-popover-shared n-dropdown"
  style="--n-box-shadow: 0 3px 6px -4px rgba(0, 0, 0, .12), 0 6px 16px 0 rgba(0, 0, 0, .08), 0 9px 28px 8px rgba(0, 0, 0, .05); --n-bezier: cubic-bezier(.4, 0, .2, 1); --n-bezier-ease-in: cubic-bezier(.4, 0, 1, 1); --n-bezier-ease-out: cubic-bezier(0, 0, .2, 1); --n-font-size: 14px; --n-text-color: rgb(51, 54, 57); --n-color: #fff; --n-divider-color: rgb(239, 239, 245); --n-border-radius: 3px; --n-arrow-height: 6px; --n-arrow-offset: 10px; --n-arrow-offset-vertical: 10px; --n-padding: 4px 0; --n-space: 6px; --n-space-arrow: 10px; --n-option-height: 34px; --n-option-prefix-width: 14px; --n-option-icon-prefix-width: 36px; --n-option-suffix-width: 14px; --n-option-icon-suffix-width: 32px; --n-option-icon-size: 16px; --n-option-opacity-disabled: 0.5; --n-option-color-hover: rgb(243, 243, 245); --n-option-color-active: rgba(24, 160, 88, 0.1); --n-option-text-color: rgb(51, 54, 57); --n-option-text-color-hover: rgb(51, 54, 57); --n-option-text-color-active: #18a058; --n-option-text-color-child-active: #18a058; --n-prefix-color: rgb(51, 54, 57); --n-suffix-color: rgb(51, 54, 57); --n-group-header-text-color: rgb(118, 124, 130);"
>
  
  
  <div
    class="n-dropdown-option"
  >
    <div
      class="n-dropdown-option-body n-dropdown-option-body--group"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
        data-dropdown-option="true"
      />
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        主角和吃的
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      />
    </div>
  </div>
  
  <div
    class="n-dropdown-option"
    data-dropdown-option="true"
  >
    <div
      class="n-dropdown-option-body"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
      >
        <!---->
      </div>
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        杰·盖茨比
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      />
    </div>
    <!---->
  </div>
  <div
    class="n-dropdown-divider"
  />
  <div
    class="n-dropdown-option"
    data-dropdown-option="true"
  >
    <div
      class="n-dropdown-option-body n-dropdown-option-body--disabled"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
      >
        <i
          class="n-icon"
          role="img"
          style="--n-bezier: cubic-bezier(.4, 0, .2, 1);"
        >
          <svg
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <rect
              fill="none"
              height="256"
              rx="16"
              ry="16"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="32"
              transform="rotate(180 256 208)"
              width="448"
              x="32"
              y="80"
            />
            <path
              d="M64 384h384"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M96 432h320"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <circle
              cx="256"
              cy="208"
              fill="none"
              r="80"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M480 160a80 80 0 0 1-80-80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M32 160a80 80 0 0 0 80-80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M480 256a80 80 0 0 0-80 80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
            <path
              d="M32 256a80 80 0 0 1 80 80"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="32"
            />
          </svg>
        </i>
      </div>
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        黛西·布坎南
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      />
    </div>
    <!---->
  </div>
  
  
  <div
    class="n-dropdown-divider"
  />
  <div
    class="n-dropdown-option"
    data-dropdown-option="true"
  >
    <div
      class="n-dropdown-option-body"
    >
      <div
        class="n-dropdown-option-body__prefix n-dropdown-option-body__prefix--show-icon"
      >
        <!---->
      </div>
      <div
        class="n-dropdown-option-body__label"
        data-dropdown-option="true"
      >
        其他角色
      </div>
      <div
        class="n-dropdown-option-body__suffix n-dropdown-option-body__suffix--has-submenu"
        data-dropdown-option="true"
      >
        <i
          class="n-icon"
          role="img"
          style="--n-bezier: cubic-bezier(.4, 0, .2, 1);"
        >
          <svg
            fill="none"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.64645 3.14645C5.45118 3.34171 5.45118 3.65829 5.64645 3.85355L9.79289 8L5.64645 12.1464C5.45118 12.3417 5.45118 12.6583 5.64645 12.8536C5.84171 13.0488 6.15829 13.0488 6.35355 12.8536L10.8536 8.35355C11.0488 8.15829 11.0488 7.84171 10.8536 7.64645L6.35355 3.14645C6.15829 2.95118 5.84171 2.95118 5.64645 3.14645Z"
              fill="currentColor"
            />
          </svg>
        </i>
      </div>
    </div>
    
    <div
      class="n-dropdown-offset-container"
    >
      <!---->
    </div>
    
  </div>
  
  <!---->
</div>
`;
